--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,19 @@
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 16px/1.6;
 	color: #333;
-	line-height: 1.5;
+	/* line-height: 1.5; */
 }
+
 body {
 	background-color: #fdfdfd;
-	margin: 0;
+	/* margin: 0; */
 	position:relative;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	/* font-size: 10pt; */
 	color: #333;
 }
 a {
@@ -30,7 +31,7 @@ a img{
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+  /* margin: 0 0 20px; */
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -42,7 +43,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  /* font-size: 8pt; */
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
@@ -50,13 +51,13 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 /* ====================== Navigation ====================== */
 nav {
-  width: 100%;
-  height: 80px;
+  /* width: 100%; */
+  /* height: 80px; */
   background-color: #252831;
   text-align:center;
 }
 nav h1 {
-  margin: auto;
+  /* margin: auto; */
 }
 nav h1 a {
   color: #fff;
@@ -66,12 +67,12 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    /* padding: 10px 40px 16px; */
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    /* font-size: 17px; */
     margin: 0;
-    width: calc(50% - 80px);
+    /* width: calc(50% - 80px); */
 }
 
 /* Display list items side by side */
@@ -115,7 +116,7 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  /* margin: 0 20px; */
 }
 .filter-options select {
   background-color: white;
@@ -124,9 +125,9 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  /* margin: 10px;
+  padding: 0 10px; */
+  /* width: 200px; */
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -218,11 +219,11 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	/* width: 90%; */
 }
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+  /* font-size: 12pt;
+  margin: 10px 0px; */
 }
 #restaurant-cuisine {
   background-color: #333;
@@ -234,23 +235,23 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	/* width: 90%; */
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  /* padding: 140px 40px 30px;
+  width: 50%; */
 }
 #reviews-container {
   padding: 30px 40px 80px;
 }
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  /* font-size: 24pt; */
   font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+  /* letter-spacing: -1px;
+  padding-bottom: 1pt; */
 }
 #reviews-list {
   margin: 0;
