--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,10 @@ body,td,th,p{
 body {
 	background-color: #fdfdfd;
 	/* margin: 0; */
-	position:relative;
+  position:relative;
+  margin: 0px;
+padding: 0px;
+  border: 0px;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -55,6 +58,8 @@ nav {
   /* height: 80px; */
   background-color: #252831;
   text-align:center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 nav h1 {
   /* margin: auto; */
@@ -107,7 +112,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100%;
   background-color: #3397DB;
   align-items: center;
 }
@@ -123,10 +128,10 @@ nav h1 a {
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
   font-size: 11pt;
-  height: 35px;
+  /* height: 35px; */
   letter-spacing: 0;
-  /* margin: 10px;
-  padding: 0 10px; */
+  /* margin: 10px; */
+  padding: 0 10px;
   /* width: 200px; */
 }
 
@@ -137,7 +142,12 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
@@ -146,7 +156,9 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  /* width: 270px; */
+  width: 80%;
+  max-width: 480px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -259,7 +271,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -274,3 +286,11 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
+
+/* Responsive breakpoints */
+/* @media all and (min-width: 480px) { ... }
+
+@media all and (min-width: 768px) { ... }
+
+@media all and (min-width: 992px) { ... } */
