--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,7 @@ nav h1 a {
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+  max-width: 480px;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -247,7 +248,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 100%;
+  width: 100%;
+  max-width: 480px;
 }
 #restaurant-address {
   /* font-size: 12pt;
